--- a/styles.css
+++ b/styles.css
@@ -114,10 +114,10 @@ body
 .topcenter
 {
   position:absolute;
-  top:50px;
-  left:500px;
-  padding: 10px;
-  width: 500px;
+  top:10%;
+  left:25%;
+  padding: 1%;
+  width: 40%;
 }
 
 body
