--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,16 @@
-.center {
-  font-size: 18px;
-  border-style: double;
-  margin: auto;
-  width: 30%;
-  padding: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  line-height: 1.5;
-}
-
 body{
     background:#f4f3ef;
+    display: -ms-flexbot;
+    display: -webkit-box;
+    display:flex;
+    -ms-flex-align:center;
+    -ms-flex-pack:center;
+    -webkit-box-align:center;
+    /*align-items: center;*/
+    -webkit-box-pack:center;
+    justify-content: center;
+    /*padding-top: 40px;*/
+    padding-bottom: 40px
 }
 
 #wrapper {
@@ -206,5 +203,12 @@ btn-menu {
 .className
 {
   color:#000000;
+}
 
+.container
+{
+  width: 100%;
+  max-width: 1280px;
+  padding-top: 200px;
+  margin: 0 auto;
 }
