--- a/styles.css
+++ b/styles.css
@@ -212,3 +212,25 @@ btn-menu {
   padding-top: 200px;
   margin: 0 auto;
 }
+
+
+.row
+{
+  width: inherit;
+  max-width: 1280px;
+  padding-top: 200px;
+  margin: 0 auto;
+}
+
+.social-link {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #666;
+    border-radius: 50%;
+    transition: all 0.3s;
+    font-size: 0.9rem;
+}
